--- a/ApplicationCode/AndroidManifest.xml
+++ b/ApplicationCode/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.example.crawlcmu.HomeScreen"
+            android:name="com.application.activities.HomeScreen"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,15 +23,15 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.example.crawlcmu.FBFeedActivity"
+            android:name="com.application.activities.FBFeedActivity"
             android:label="@string/title_activity_fbfeed" >
         </activity>
         <activity
-            android:name="com.crawlcmu.managesubscriptions.FBSubscribeActivity"
+            android:name="com.application.managesubscriptions.FBSubscribeActivity"
             android:label="@string/title_activity_manage_subscriptions" >
         </activity>
         <activity
-            android:name="com.example.crawlcmu.FBManageSubscriptions"
+            android:name="com.application.activities.FBManageSubscriptions"
             android:label="@string/title_activity_fbmanage_subscriptions" >
         </activity>
     </application>
