--- a/ApplicationCode/AndroidManifest.xml
+++ b/ApplicationCode/AndroidManifest.xml
@@ -4,6 +4,9 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
+    <uses-permission android:name="android.permission.INTERNET" >
+    </uses-permission>
+
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="18" />
@@ -26,6 +29,12 @@
             android:name="com.application.activities.FBFeedActivity"
             android:label="@string/title_activity_fbfeed" >
         </activity>
+
+        <activity android:name="com.facebook.LoginActivity"/>
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/app_id" />
+
         <activity
             android:name="com.application.managesubscriptions.FBSubscribeActivity"
             android:label="@string/title_activity_manage_subscriptions" >
@@ -33,6 +42,10 @@
         <activity
             android:name="com.application.activities.FBManageSubscriptions"
             android:label="@string/title_activity_fbmanage_subscriptions" >
+        </activity>
+        <activity
+            android:name="com.application.activities.MainActivity"
+            android:label="@string/title_activity_main" >
         </activity>
     </application>
 
