--- a/ApplicationCode/AndroidManifest.xml
+++ b/ApplicationCode/AndroidManifest.xml
@@ -6,6 +6,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" >
     </uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <uses-sdk
         android:minSdkVersion="8"
@@ -35,6 +36,10 @@
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/app_id" />
 
+        <activity android:name="com.application.activities.MainActivity"
+				  android:label="@string/app_name">
+        </activity>
+        
         <activity
             android:name="com.application.managesubscriptions.FBSubscribeActivity"
             android:label="@string/title_activity_manage_subscriptions" >
