--- a/ApplicationCode/AndroidManifest.xml
+++ b/ApplicationCode/AndroidManifest.xml
@@ -30,16 +30,16 @@
             android:name="com.application.activities.FBFeedActivity"
             android:label="@string/title_activity_fbfeed" >
         </activity>
+        <activity android:name="com.facebook.LoginActivity" />
 
-        <activity android:name="com.facebook.LoginActivity"/>
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/app_id" />
 
-        <activity android:name="com.application.activities.MainActivity"
-				  android:label="@string/app_name">
+        <activity
+            android:name="com.application.activities.MainActivity"
+            android:label="@string/app_name" >
         </activity>
-        
         <activity
             android:name="com.application.managesubscriptions.FBSubscribeActivity"
             android:label="@string/title_activity_manage_subscriptions" >
@@ -51,6 +51,10 @@
         <activity
             android:name="com.application.activities.FBLoginActivity"
             android:label="@string/title_activity_main" >
+        </activity>
+        <activity
+            android:name="com.rssreader.rssdataitem.RssReaderActivity"
+            android:label="@string/title_activity_rss_reader" >
         </activity>
     </application>
 
