--- a/ApplicationCode/project.properties
+++ b/ApplicationCode/project.properties
@@ -11,5 +11,6 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-19
+target=Google Inc.:Google APIs:17
 android.library.reference.1=../../../../Downloads/newfacebook-android-sdk-3.5.22/facebook
+android.library.reference.2=../facebook-android-sdk-3.5/facebook
